# Digital-Twin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  me.py  pyproject.toml
.github/workflows/: deploy.yml
terraform/: apprunner.tf  cloudwatch.tf  ecr.tf  iam.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
